Duplicates: Fix hidden elements remaining visible
And update comment.

Fixes #5056

--- a/scss/elements/_duplicatesMergePane.scss
+++ b/scss/elements/_duplicatesMergePane.scss
@@ -1,9 +1,11 @@
 duplicates-merge-pane {
 	&, #zotero-duplicates-merge-version-select, #zotero-duplicates-merge-info-box-container {
-		display: flex;
-		flex-direction: column;
-		gap: 8px;
-		scrollbar-color: var(--color-scrollbar) var(--color-scrollbar-background);
+		&:not([hidden]) {
+			display: flex;
+			flex-direction: column;
+			gap: 8px;
+			scrollbar-color: var(--color-scrollbar) var(--color-scrollbar-background);
+		}
 	}
 
 	padding-top: 9px;
